--- a/pascalInterpreter/Makefile
+++ b/pascalInterpreter/Makefile
@@ -1,13 +1,5 @@
-KOTLINC = kotlinc
 MAIN_FILE = src/main/kotlin/Main.kt
-FLAGS = -include-runtime -d
 OUT_FILE = ./target/main.jar
-
-ifeq ($(OS), Windows_NT)
-	RM = del
-else
-	RM = rm
-endif
 
 test:
 	mvn test
@@ -16,7 +8,9 @@ clean:
 	mvn clean
 
 kotlin:
-	$(KOTLINC) $(MAIN_FILE) $(FLAGS) $(OUT_FILE)
+	kotlinc $(MAIN_FILE) -include-runtime -d $(OUT_FILE)
 
+java:
+	java -jar $(OUT_FILE)
 
-run: kotlin clean
+run: kotlin java clean
